fix(diff-view): Do not unmount file row on collapsed

--- a/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/changes/_components/FileTreeRow/FileTreeRow.module.css
+++ b/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/changes/_components/FileTreeRow/FileTreeRow.module.css
@@ -11,7 +11,11 @@
     background-color: var(--background-secondary-light);
 }
 
-.nodeLabel {
+.collapsed {
+    display: none;
+}
+
+.label {
     display: flex;
     align-items: center;
     gap: var(--spacer-8);
